--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://git.files.gay/tacohitbox/bypass-it-for-me.git"
+    "url": "http://git.files.gay/e/bypass-it-for-me.git"
   },
   "keywords": [
     "bypass",
