--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.1",
     "got": "^11.8.2",
+    "mongodb": "^4.3.1",
     "set-cookie-parser": "^2.4.8"
   }
 }
