--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "2captcha": "^2.2.0",
     "agate": "^0.0.1",
     "cheerio": "^1.0.0-rc.10",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "got": "^11.8.2",
     "mongodb": "^4.3.1",
